--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	font-family: 'Montserrat', sans-serif;
 }
 .container{
 	width: 100%;
@@ -22,10 +23,12 @@
 .col{
 	background-color: #77787c;
 	height: 300px;
+}
+.border-general{
 	border: 18px solid white;
 }
 .col-1{
-	width: 8.337%;
+	width: 8.334%;
 }
 .col-2{
 	width: 16.667%;
@@ -43,10 +46,10 @@
 	width: 50%;
 }
 .col-7{
-	width: 58.336%;
+	width: 58.334%;
 }
 .col-8{
-	width: 35.337%;
+	width: 66.667%;
 }
 .col-9{
 	width: 75%;
@@ -55,7 +58,7 @@
 	width: 83.334%;
 }
 .col-11{
-	width: 91.666%;
+	width: 91.667%;
 }
 .col-12{
 	width: 100%;
@@ -68,4 +71,46 @@
 }
 .grid-grey{
 	background-color: #dcdddf;
+}
+.grid-3{
+	border-left: 18px solid white;
+	border-right: 18px solid white;
+}
+.row-grid-3{
+	border-top: 18px solid white;
+	border-bottom: 18px solid white;
+}
+.grid-home{
+	height: 90px;
+	background-color: transparent;
+}
+.button-central{
+	height: 420px;
+	overflow: hidden;
+}
+.button-style{
+	display: block;
+	width: 30%;
+	height: 9.2%;
+	margin: 1.1% auto;
+	border-radius: 8px;
+	text-align: center;
+	border: 3px solid #3276b1;
+	padding: 0.5%;
+	font-size: 1.2em;
+	text-decoration: none;
+	color: white;
+	/*box-shadow: 2px 2px 3px 1px rgba(0,0,0,0.4);*/
+	background-color: #3276b1;
+	transition: width 0.5s, height 0.5s, transform 0.5s;
+}
+.button-style:hover{
+	background-color: white;
+	color: #3276b1;
+	transform : scale(1.1);
+}
+.row h1{
+	text-align: center;
+	color: #3276b1;
+	padding: 2%;
 }
